--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "lodash": "^4.17.4",
+    "path": "^0.12.7",
     "request": "^2.81.0"
   }
 }
